# AnglerbotSim

./: README
Assets/: New Terrain.asset  msgbrowser_settings.asset
Assets/Animations/: ForwardPropeller.anim  ForwardPropeller.controller  RotateInPlace.anim  VerticalPropeller.anim  VerticalPropeller.controller
Assets/Fantasy Skybox FREE/Cubemaps/Classic/: FS000_Day_04.mat
Assets/Materials/: CameraBlack.mat  LightBeam.mat
Assets/Models/: AnglerbotBody.blend  AnglerbotBody.blend1  AnglerbotPropeller.blend  Buoy.blend  Buoy.blend1  Cone.blend  Cone.blend1  Tag.blend
Assets/Prefabs/: Buoy with Tag.prefab
Assets/Resources/: ROSConnectionPrefab.prefab
Assets/Scenes/: BasicRosSubPubTest.unity  SimulatorLake.unity
Assets/Scripts/: BasicRosSubscribePublishTest.cs  EyeballControl.cs  RobotControl.cs  RosBroadcastAllFrames.cs  SourceDestinationPublisher.cs  TagBeamAdjuster.cs  WaterEffect.cs  WaterEffectTerrain.cs  keyboardMove.cs  rosMove.cs  underwaterEffect.cs
Assets/Standard Assets/Utility/: SimpleActivatorMenu.cs
Assets/TerrainLayers/: GrassLayer.terrainlayer  RockLayer.terrainlayer  SandCaustics.terrainlayer
ProjectSettings/: InputManager.asset  ProjectSettings.asset  TagManager.asset
UnityRosConnecter/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
UnityRosConnecter/install/: .rosinstall  local_setup.sh  setup.sh
UnityRosConnecter/src/ros_tcp_endpoint/: CMakeLists.txt
UnityRosConnecter/src/ros_tcp_endpoint/launch/: basic_endpoint.launch
UnityRosConnecter/src/ros_tcp_endpoint/msg/: AnglerbotMovement.msg
(+291 files in other folders)
